--- a/public/assets/css/new.css
+++ b/public/assets/css/new.css
@@ -474,12 +474,12 @@ body {
 @media (max-width: 1400px) {
 
     .nav-menu ul li .link {
-        margin: 0 20px;
-        margin-left: 0;
+        margin: 0 35px;
+        margin-left: 18px;
+        font-size: 16px;
     }
 
 }
-
 
 @media (max-width: 1200px) {
 
